--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,8 +22,8 @@
     "@types/react-dom": "^18.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
